2007-08-13  Stefan Kost  <ensonic@users.sf.net>

	* gtkdoc-mkdb.in:
	  Fix the funny side-effect of last 'broken-returns' fix.

2007-08-13  Stefan Kost  <ensonic@users.sf.net>

	* gtkdoc-scan.in:
	* tests/bugs/src/tester.h:
	  Really fix #460127.

2007-08-13  Stefan Kost  <ensonic@users.sf.net>

	* gtkdoc-mkdb.in:
	  Now the 'broken' returns seems to work better. Fixes #380824 more.

2007-08-13  Stefan Kost  <ensonic@users.sf.net>

	* tests/bugs/docs/tester-sections.txt:
	* tests/bugs/src/tester.c (bug_379466, bug_380824):
	* tests/bugs/src/tester.h (test):
	  New test.
	* tests/gtkdoctest.sh:
	  Fix bashism.

2007-08-12  Stefan Kost  <ensonic@users.sf.net>

	* tests/bugs/docs/tester-sections.txt:
	* tests/bugs/src/tester.h:
	  Add another test for a bug we fixed with the changes below.
	  Fixes #460127.

2007-08-12  Stefan Kost  <ensonic@users.sf.net>

	* gtkdoc-scan.in:
	* tests/bugs/docs/tester-sections.txt:
	* tests/bugs/src/tester.c:
	* tests/bugs/src/tester.h:
	  Improved scan logic. Fixes #411739.

2007-08-12  Stefan Kost  <ensonic@users.sf.net>

	* gtkdoc-mkdb.in:
	* tests/bugs/src/tester.h:
	  Handle newline in declarations better. Fixes #379466.
	  Ensure space in multiline declarations when removing the newline.
	  Fix missing argument docs in template free build.

2007-08-12  Stefan Kost  <ensonic@users.sf.net>

	* gtkdoc-mkdb.in:
	* gtkdoc-mktmpl.in:
	  Handle "unsigned long|unsigned short|signed long|signed short".
	  Fixes #445693.

2007-08-12  Stefan Kost  <ensonic@users.sf.net>

	* Makefile.am:
	* configure.in:
	* gtkdoc-check:
	* gtkdoc-check.in:
	  Replacing my shell based test script by Davids perl based one. Add
	  licence, copyright and docs header. Integrate with build.

2007-08-12  Stefan Kost  <ensonic@users.sf.net>

	patch by: David Nečas <yeti@physics.muni.cz>

	* gtkdoc-scangobj.in:
	  Make introspection of interfaces work in more cases. Fixes #355352.

2007-08-12  Stefan Kost  <ensonic@users.sf.net>
