@@ -1,3 +1,8 @@
+2007-08-14  Stefan Kost  <ensonic@users.sf.net>
+
+	* help/manual/C/gtk-doc-manual.xml:
+	  Document new features and bump version.
+
 2007-08-13  Stefan Kost  <ensonic@users.sf.net>
 
 	* gtkdoc-mkdb.in:
